--- a/html/home.html
+++ b/html/home.html
@@ -24,8 +24,8 @@
   
 </head>
 
-<body data-spy="scroll" data-target="#Scroolspy--Home__NavList" data-offset="0">
-	<div id="SiteContainer" class="site-container p-page">
+<body>
+	<div id="SiteContainer" class="site-container p-page p-front">
 		<div class="container">
 			<div class="p-page__wrapper">
 				<header id="SiteHeader" class="l-header l-header--sidebar">
